Front-end done (Waiting for corrections)

--- a/views/admin/dashboard.html
+++ b/views/admin/dashboard.html
@@ -77,24 +77,27 @@
                             <div class="card">
 
                                 <div class="header">
-                                    <h4 class="title">List of procedures</h4>
+                                    <h4 class="title">List of medical personnel</h4>
                                     <br>
-                                    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for causes...">
+                                    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
                                 </div>
 
                                 <div class="content table-responsive table-full-width">
                                     <table id="myTable" class="table table-striped">
                                       <tr class="header">
-                                        <th>Cause</th>
-                                        <th>Type</th>
+                                        <th>Last Name</th>
+                                        <th>Name</th>
+                                        <th>Specialty</th>
                                         <th>Action</th>
                                       </tr>
                                       
                                       <tr>
-                                        <td>Took an arrow to the knee</td>
-                                        <td>Consultation</td>
+                                        <td>Hitler</td>
+                                        <td>Adolf</td>
+                                        <td>Burning man </td>
                                         <td>
-                                            <a href="edit_procedure.html" class="btn btn-info btn-fill btn-wd">Edit</a>
+                                            <a href="edit_user.html" class="btn btn-info btn-fill btn-wd">Edit Profile</a>
+                                            <a href="create_procedure.html" class="btn btn-danger btn-fill btn-wd">Deactivate</a>
                                         </td>
                                       </tr>
 
@@ -102,7 +105,7 @@
                                 </div>
 
                             </div>
-                             <a href="create_procedure.html" class="btn btn-success btn-fill btn-wd">Add procedure</a>
+                             <a href="create_user.html" class="btn btn-success btn-fill btn-wd">Add personnel</a>
                         </div>
                     </div>
                 </div>
