--- a/views/medical_personnel/dashboard.html
+++ b/views/medical_personnel/dashboard.html
@@ -85,6 +85,7 @@
                                 <div class="content table-responsive table-full-width">
                                     <table id="myTable" class="table table-striped">
                                       <tr class="header">
+                                        <th>Last Name</th>
                                         <th>Name</th>
                                         <th>Age</th>
                                         <th>Gender</th>
@@ -94,7 +95,8 @@
                                       </tr>
                                       
                                       <tr>
-                                        <td>Adolf Hitler</td>
+                                        <td>Hitler</td>
+                                        <td>Adolf</td>
                                         <td>43</td>
                                         <td>Jew </td>
                                         <td>1.78 </td>
