--- a/views/admin/create_user.html
+++ b/views/admin/create_user.html
@@ -62,7 +62,7 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Patient Creation</a>
+                    <a class="navbar-brand" href="#">Personnel Creation</a>
                 </div>
             </div>
         </nav>
@@ -74,7 +74,7 @@
                     <div class="col-lg-12 col-md-7">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Create a new patient</h4>
+                                <h4 class="title">Create a new employee</h4>
                             </div>
                             <div class="content">
                                 <form>
@@ -96,74 +96,11 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>Birth Date</label>
-                                                <input type="date" class="form-control border-input" placeholder="Company" name="birth_date">
+                                                <label>Specialty</label>
+                                                <input type="text" class="form-control border-input" placeholder="Specialty" name="specialty">
                                             </div>
                                         </div>
                                     </div>                                    
-
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label>Age</label>
-                                                <input type="number" class="form-control border-input" placeholder="Age in years" name="age">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label>Gender</label>
-                                                    <select name="gender" class="form-control border-input">
-                                                        <option value="masculine">Masculine</option>
-                                                        <option value="femenine">Femenine</option>
-                                                    </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="form-group">
-                                                <label>Blood Type</label>
-                                                    <select name="blood_type" class="form-control border-input">
-                                                        <option value="O-">O-</option>
-                                                        <option value="O+">O+</option>
-                                                        <option value="B-">B-</option>
-                                                        <option value="B+">B+</option>
-                                                        <option value="A-">A-</option>
-                                                        <option value="A+">A+</option>
-                                                        <option value="AB-">AB-</option>
-                                                        <option value="AB+">AB+</option>
-                                                    </select>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label>Emergency Contact Name</label>
-                                                <input type="text" class="form-control border-input" placeholder="Name of the contact" name="emergency_name">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label>Emergency Contact Phone</label>
-                                                <input type="text" class="form-control border-input" placeholder="Phone of the contact" name="emergency_phone">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label>Height</label>
-                                                <input type="text" class="form-control border-input" placeholder="Height in meters" name="height">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-group">
-                                                <label>Weight</label>
-                                                <input type="text" class="form-control border-input" placeholder="Weight in kilograms" name="weight">
-                                            </div>
-                                        </div>                                        
-                                    </div>
 
                                     <div class="row">
                                         <div class="col-md-6">
@@ -177,10 +114,10 @@
                                                 <label>Password</label>
                                                 <input type="password" class="form-control border-input" placeholder="Password" name="password">
                                             </div>
-                                        </div>                                        
-                                    </div> 
+                                        </div>
+                                    </div>
 
-                                        <button type="submit" class="btn btn-info btn-fill btn-wd">Create patient</button>
+                                        <button type="submit" class="btn btn-info btn-fill btn-wd">Create employee</button>
                                    
                                     <div class="clearfix"></div>
                                 </form>
