--- a/views/medical_personnel/edit_user.html
+++ b/views/medical_personnel/edit_user.html
@@ -71,7 +71,88 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12 col-md-7">
+                <div class="col-lg-4 col-md-5">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Conditions</h4>
+                            </div>
+                            <div class="content">
+                                <ul class="list-unstyled team-members">
+                                    <li>
+                                        <div class="row">
+
+                                            <div class="col-xs-9">
+                                                Condition 1
+                                            </div>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <div class="row">
+                                            <div class="col-xs-9">
+                                                Condition 2                                                       
+                                            </div>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <div class="row">
+                                            <div class="col-xs-9">
+                                                Condition 3              
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <a href="javascript:showhide('uniquename')" class="btn btn-success btn-fill btn-wd">Add condition</a><br><br>                       
+
+                        <div class="row" id="uniquename" style="display:none;">
+                            <div class="col-lg-12 col-md-5">
+                                <div class="card">
+                                    <div class="header">
+                                        <h4 class="title">Add condition</h4>
+                                    </div>
+                                    <div class="content">
+                                        <ul class="list-unstyled team-members">
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-xs-12">
+                                                        <form>
+                                                            <div class="row">
+                                                                <div class="col-md-12">
+                                                                    <div class="form-group">
+                                                                        <label>Condition name</label>
+                                                                        <input type="text" class="form-control border-input" placeholder="Name">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-md-12">
+                                                                    <div class="form-group">
+                                                                        <label>Condition type</label>
+                                                                        <select name="gender" class="form-control border-input">
+                                                                            <option value="allergy">Allergy</option>
+                                                                            <option value="suffering">Suffering</option>
+                                                                        </select>                                                                    
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                                                          
+                                                            <button type="submit" class="btn btn-info btn-fill btn-wd">Add</button>
+                                                            <div class="clearfix"></div>
+                                                        </form>             
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>                       
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-md-7">
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">Edit an existing patient</h4>
@@ -205,5 +286,12 @@
 
 	<!-- Paper Dashboard DEMO methods, don't include it in your project! -->
 	<script src="../assets/js/demo.js"></script>
+
+    <script>
+    function showhide(id) {
+        var e = document.getElementById(id);
+        e.style.display = (e.style.display == 'block') ? 'none' : 'block';
+     }
+     </script>
 
 </html>
