--- a/views/medical_personnel/edit_user.html
+++ b/views/medical_personnel/edit_user.html
@@ -128,7 +128,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <div class="row">
+                                                            <data></data>iv class="row">
                                                                 <div class="col-md-12">
                                                                     <div class="form-group">
                                                                         <label>Condition type</label>
